--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "install": "npm install",
     "start": "node server.js",
+    "build": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
