--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-server-auth",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "install": "npm install",
     "start": "node server.js",
