--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "install": "npm install --omit=dev",
     "start": "node server.js",
-    "build": "echo 'No build step needed'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "exit 0"
   },
   "keywords": [],
   "author": "",
