--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "json-server": "^0.17.4",
-    "json-server-auth": "2.1.0",
+    "json-server-auth": "file:",
     "jsonwebtoken": "^9.0.2"
   }
 }
