--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "exit 0"
+    "build": "exit 0",
+    "verceñ-build": "echo hello"
   },
   "keywords": [],
   "author": "",
